# django-startapp

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  cookiecutter.json  main.py  package-lock.json  package.json  pyproject.toml
.husky/: pre-commit
{{cookiecutter.app_name}}/: __init__.py  apps.py  filters.py  managers.py  models.py  routers.py  serializers.py  views.py
